[project]
name = "dawa-api"
dynamic = ["version"]
authors = [
  { name="Erik Petersen", email="eht@it-trans.dk" },
]
description = "Library for communicating with Danmarks Adressers Web API (DAWA)"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests",
    "dataclasses_json",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "responses>=0.25.8",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
    ".gitignore",
    "LICENSE.txt",
    "examples/",
    "tests/",
]

